feat: Реализация полного E2E тестирования ShlapaBank API с Cucumber
- Добавлены модели данных для всех сущностей:
  * Auth, Account, Transaction, Transfer, Payment, User, Admin
  * Добавлены enum-классы (AccountType, Currency, TransactionType, UserRole, UserStatus)
  * Реализованы DTO с Lombok аннотациями (@Data, @Builder, @Jacksonized)

- Реализованы API клиенты для всех эндпоинтов:
  * AuthApi - регистрация и авторизация
  * AccountsApi - управление счетами (открытие, закрытие, пополнение)
  * TransfersApi - переводы между счетами, по номеру счета/телефона, обмен валют
  * PaymentsApi - оплата мобильной связи и поставщиков услуг
  * TransactionsApi - история операций и скачивание чеков
  * AdminApi - администрирование (блокировка, разблокировка, удаление пользователей)
  * HelperApi - вспомогательные методы для тестирования (OTP, изменение баланса)
  * UserApi - работа с пользователями

- Реализованы Step Definitions для Cucumber:
  * AuthServer - шаги регистрации и авторизации
  * AccountsServer - шаги управления счетами
  * TransfersServer - шаги переводов и проверки балансов
  * PaymentsServer - шаги оплаты услуг
  * TransactionsServer - шаги истории операций
  * AdminServer - шаги администрирования
  * CommonSteps - общие шаги (проверка статуса, ошибок)

- Настроена конфигурация через Owner:
  * DataConfig - чтение параметров из local.properties
  * BaseSpec - базовая спецификация для RestAssured
  * WebDriverConfig - конфигурация Selenide

- Добавлены EndPoints для всех API:
  * Единое хранилище всех эндпоинтов с методами для path параметров
  * Именование методов с суффиксом Path для избежания конфликтов

- Реализован ScenarioContext для передачи данных между шагами:
  * Хранение токенов, ID, балансов, ответов API
  * Поддержка String и Object данных

- Написаны feature файлы для всех сценариев:
  * auth.feature - регистрация и авторизация
  * accounts.feature - управление счетами
  * transfers.feature - переводы и обмен валют
  * payments.feature - платежи
